2000-07-19  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_PROG_CC): Don't require AC_PROG_F77, require
	AC_PROG_CC instead.
	From Martin Wilck.
	(AC_PROG_F77_C_O): Require AC_PROG_F77.
	Use a cache variable independent of $F77.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh: Accept --symbolic and -s.

2000-07-19  Akim Demaille  <akim@epita.fr>

	Make it clear that the regular user does not need --macrodir.
	In fact, rename this option as -A, --autoconf-dir.

	* autoconf.sh: Complain when -m, --macrodir is used.
	Accept -A, --autoconf-dir.
	Use $autoconf_dir instead of $AC_MACRODIR.
	Adjust --help.
	* autoheader.sh: Likewise.
	* autoscan.sh: Likewise.
	* autoupdate.sh: Likewise.
	Use $optarg.
	* autoreconf.sh: Likewise.
	* doc/autoconf.texi: Adjust.
	* tests: Adjust the test suite.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh: Forward --debug to sub tools.
	Let them share the same tmp dir.

2000-07-18  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_MING32): Rename as AC_MINGW32.

2000-07-18  Steven G. Johnson  <stevenj@alum.mit.edu>

	Fixed bug where the F77 compiler output was parsed differently
	when detecting the verbose flag than when scanning for linker
	options, and as a result the former test failed (under AIX/xlf).

	* aclang.m4 (_AC_PROG_F77_V_OUTPUT): New macro to get the
	output of linking an F77 program with a given verbose flag,
	and preprocess it as required to scan for linker flags.
	(_AC_PROG_F77_V): Use the above macro here...
	(AC_F77_LIBRARY_LDFLAGS): ...and here, enforcing consistency.

2000-07-17  Martin Wilck  <martin@tropos.de>

	* autoupdate.sh (autoconf): s,$updated,$tmp/updated,.

2000-07-17  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Configuration Actions): Explain the
	behavior of  AC_CONFIG_HEADERS and AC_CONFIG_FILES with respect to
	absolute and relative filenames, and stdin/stdout.
	(config.status invocation): Likewise.

2000-07-17  Akim Demaille  <akim@epita.fr>
